Iteration1/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> all
Rule 1     all -> empty
Rule 2     all -> all title
Rule 3     all -> all seperator
Rule 4     all -> all paragraph
Rule 5     all -> all newline
Rule 6     seperator -> SEPERATOR
Rule 7     newline -> NEWLINE
Rule 8     title -> POUNDSIGN CONTENTS
Rule 9     paragraph -> texts
Rule 10    paragraph -> paragraph texts
Rule 11    texts -> LATICS texts LATICS
Rule 12    texts -> BOLD texts BOLD
Rule 13    texts -> CONTENTS
Rule 14    empty -> <empty>

Terminals, with rules where they appear

BOLD                 : 12 12
CONTENTS             : 8 13
LATICS               : 11 11
NEWLINE              : 7
POUNDSIGN            : 8
SEPERATOR            : 6
error                : 

Nonterminals, with rules where they appear

all                  : 2 3 4 5 0
empty                : 1
newline              : 5
paragraph            : 4 10
seperator            : 3
texts                : 9 10 11 12
title                : 2

Parsing method: LALR

state 0

    (0) S' -> . all
    (1) all -> . empty
    (2) all -> . all title
    (3) all -> . all seperator
    (4) all -> . all paragraph
    (5) all -> . all newline
    (14) empty -> .

    POUNDSIGN       reduce using rule 14 (empty -> .)
    SEPERATOR       reduce using rule 14 (empty -> .)
    NEWLINE         reduce using rule 14 (empty -> .)
    LATICS          reduce using rule 14 (empty -> .)
    BOLD            reduce using rule 14 (empty -> .)
    CONTENTS        reduce using rule 14 (empty -> .)
    $end            reduce using rule 14 (empty -> .)

    all                            shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> all .
    (2) all -> all . title
    (3) all -> all . seperator
    (4) all -> all . paragraph
    (5) all -> all . newline
    (8) title -> . POUNDSIGN CONTENTS
    (6) seperator -> . SEPERATOR
    (9) paragraph -> . texts
    (10) paragraph -> . paragraph texts
    (7) newline -> . NEWLINE
    (11) texts -> . LATICS texts LATICS
    (12) texts -> . BOLD texts BOLD
    (13) texts -> . CONTENTS

    POUNDSIGN       shift and go to state 7
    SEPERATOR       shift and go to state 8
    NEWLINE         shift and go to state 3
    LATICS          shift and go to state 10
    BOLD            shift and go to state 4
    CONTENTS        shift and go to state 13

    title                          shift and go to state 5
    newline                        shift and go to state 6
    texts                          shift and go to state 12
    paragraph                      shift and go to state 9
    seperator                      shift and go to state 11

state 2

    (1) all -> empty .

    POUNDSIGN       reduce using rule 1 (all -> empty .)
    SEPERATOR       reduce using rule 1 (all -> empty .)
    NEWLINE         reduce using rule 1 (all -> empty .)
    LATICS          reduce using rule 1 (all -> empty .)
    BOLD            reduce using rule 1 (all -> empty .)
    CONTENTS        reduce using rule 1 (all -> empty .)
    $end            reduce using rule 1 (all -> empty .)


state 3

    (7) newline -> NEWLINE .

    POUNDSIGN       reduce using rule 7 (newline -> NEWLINE .)
    SEPERATOR       reduce using rule 7 (newline -> NEWLINE .)
    NEWLINE         reduce using rule 7 (newline -> NEWLINE .)
    LATICS          reduce using rule 7 (newline -> NEWLINE .)
    BOLD            reduce using rule 7 (newline -> NEWLINE .)
    CONTENTS        reduce using rule 7 (newline -> NEWLINE .)
    $end            reduce using rule 7 (newline -> NEWLINE .)


state 4

    (12) texts -> BOLD . texts BOLD
    (11) texts -> . LATICS texts LATICS
    (12) texts -> . BOLD texts BOLD
    (13) texts -> . CONTENTS

    LATICS          shift and go to state 10
    BOLD            shift and go to state 4
    CONTENTS        shift and go to state 13

    texts                          shift and go to state 14

state 5

    (2) all -> all title .

    POUNDSIGN       reduce using rule 2 (all -> all title .)
    SEPERATOR       reduce using rule 2 (all -> all title .)
    NEWLINE         reduce using rule 2 (all -> all title .)
    LATICS          reduce using rule 2 (all -> all title .)
    BOLD            reduce using rule 2 (all -> all title .)
    CONTENTS        reduce using rule 2 (all -> all title .)
    $end            reduce using rule 2 (all -> all title .)


state 6

    (5) all -> all newline .

    POUNDSIGN       reduce using rule 5 (all -> all newline .)
    SEPERATOR       reduce using rule 5 (all -> all newline .)
    NEWLINE         reduce using rule 5 (all -> all newline .)
    LATICS          reduce using rule 5 (all -> all newline .)
    BOLD            reduce using rule 5 (all -> all newline .)
    CONTENTS        reduce using rule 5 (all -> all newline .)
    $end            reduce using rule 5 (all -> all newline .)


state 7

    (8) title -> POUNDSIGN . CONTENTS

    CONTENTS        shift and go to state 15


state 8

    (6) seperator -> SEPERATOR .

    POUNDSIGN       reduce using rule 6 (seperator -> SEPERATOR .)
    SEPERATOR       reduce using rule 6 (seperator -> SEPERATOR .)
    NEWLINE         reduce using rule 6 (seperator -> SEPERATOR .)
    LATICS          reduce using rule 6 (seperator -> SEPERATOR .)
    BOLD            reduce using rule 6 (seperator -> SEPERATOR .)
    CONTENTS        reduce using rule 6 (seperator -> SEPERATOR .)
    $end            reduce using rule 6 (seperator -> SEPERATOR .)


state 9

    (4) all -> all paragraph .
    (10) paragraph -> paragraph . texts
    (11) texts -> . LATICS texts LATICS
    (12) texts -> . BOLD texts BOLD
    (13) texts -> . CONTENTS

  ! shift/reduce conflict for LATICS resolved as shift
  ! shift/reduce conflict for BOLD resolved as shift
  ! shift/reduce conflict for CONTENTS resolved as shift
    POUNDSIGN       reduce using rule 4 (all -> all paragraph .)
    SEPERATOR       reduce using rule 4 (all -> all paragraph .)
    NEWLINE         reduce using rule 4 (all -> all paragraph .)
    $end            reduce using rule 4 (all -> all paragraph .)
    LATICS          shift and go to state 10
    BOLD            shift and go to state 4
    CONTENTS        shift and go to state 13

  ! LATICS          [ reduce using rule 4 (all -> all paragraph .) ]
  ! BOLD            [ reduce using rule 4 (all -> all paragraph .) ]
  ! CONTENTS        [ reduce using rule 4 (all -> all paragraph .) ]

    texts                          shift and go to state 16

state 10

    (11) texts -> LATICS . texts LATICS
    (11) texts -> . LATICS texts LATICS
    (12) texts -> . BOLD texts BOLD
    (13) texts -> . CONTENTS

    LATICS          shift and go to state 10
    BOLD            shift and go to state 4
    CONTENTS        shift and go to state 13

    texts                          shift and go to state 17

state 11

    (3) all -> all seperator .

    POUNDSIGN       reduce using rule 3 (all -> all seperator .)
    SEPERATOR       reduce using rule 3 (all -> all seperator .)
    NEWLINE         reduce using rule 3 (all -> all seperator .)
    LATICS          reduce using rule 3 (all -> all seperator .)
    BOLD            reduce using rule 3 (all -> all seperator .)
    CONTENTS        reduce using rule 3 (all -> all seperator .)
    $end            reduce using rule 3 (all -> all seperator .)


state 12

    (9) paragraph -> texts .

    LATICS          reduce using rule 9 (paragraph -> texts .)
    BOLD            reduce using rule 9 (paragraph -> texts .)
    CONTENTS        reduce using rule 9 (paragraph -> texts .)
    POUNDSIGN       reduce using rule 9 (paragraph -> texts .)
    SEPERATOR       reduce using rule 9 (paragraph -> texts .)
    NEWLINE         reduce using rule 9 (paragraph -> texts .)
    $end            reduce using rule 9 (paragraph -> texts .)


state 13

    (13) texts -> CONTENTS .

    LATICS          reduce using rule 13 (texts -> CONTENTS .)
    BOLD            reduce using rule 13 (texts -> CONTENTS .)
    CONTENTS        reduce using rule 13 (texts -> CONTENTS .)
    POUNDSIGN       reduce using rule 13 (texts -> CONTENTS .)
    SEPERATOR       reduce using rule 13 (texts -> CONTENTS .)
    NEWLINE         reduce using rule 13 (texts -> CONTENTS .)
    $end            reduce using rule 13 (texts -> CONTENTS .)


state 14

    (12) texts -> BOLD texts . BOLD

    BOLD            shift and go to state 18


state 15

    (8) title -> POUNDSIGN CONTENTS .

    POUNDSIGN       reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    SEPERATOR       reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    NEWLINE         reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    LATICS          reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    BOLD            reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    CONTENTS        reduce using rule 8 (title -> POUNDSIGN CONTENTS .)
    $end            reduce using rule 8 (title -> POUNDSIGN CONTENTS .)


state 16

    (10) paragraph -> paragraph texts .

    LATICS          reduce using rule 10 (paragraph -> paragraph texts .)
    BOLD            reduce using rule 10 (paragraph -> paragraph texts .)
    CONTENTS        reduce using rule 10 (paragraph -> paragraph texts .)
    POUNDSIGN       reduce using rule 10 (paragraph -> paragraph texts .)
    SEPERATOR       reduce using rule 10 (paragraph -> paragraph texts .)
    NEWLINE         reduce using rule 10 (paragraph -> paragraph texts .)
    $end            reduce using rule 10 (paragraph -> paragraph texts .)


state 17

    (11) texts -> LATICS texts . LATICS

    LATICS          shift and go to state 19


state 18

    (12) texts -> BOLD texts BOLD .

    LATICS          reduce using rule 12 (texts -> BOLD texts BOLD .)
    BOLD            reduce using rule 12 (texts -> BOLD texts BOLD .)
    CONTENTS        reduce using rule 12 (texts -> BOLD texts BOLD .)
    POUNDSIGN       reduce using rule 12 (texts -> BOLD texts BOLD .)
    SEPERATOR       reduce using rule 12 (texts -> BOLD texts BOLD .)
    NEWLINE         reduce using rule 12 (texts -> BOLD texts BOLD .)
    $end            reduce using rule 12 (texts -> BOLD texts BOLD .)


state 19

    (11) texts -> LATICS texts LATICS .

    LATICS          reduce using rule 11 (texts -> LATICS texts LATICS .)
    BOLD            reduce using rule 11 (texts -> LATICS texts LATICS .)
    CONTENTS        reduce using rule 11 (texts -> LATICS texts LATICS .)
    POUNDSIGN       reduce using rule 11 (texts -> LATICS texts LATICS .)
    SEPERATOR       reduce using rule 11 (texts -> LATICS texts LATICS .)
    NEWLINE         reduce using rule 11 (texts -> LATICS texts LATICS .)
    $end            reduce using rule 11 (texts -> LATICS texts LATICS .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for LATICS in state 9 resolved as shift
WARNING: shift/reduce conflict for BOLD in state 9 resolved as shift
WARNING: shift/reduce conflict for CONTENTS in state 9 resolved as shift
